# 2023-Bland-bioRxiv

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  environment.yml  environment_setup.yml  pyproject.toml  requirements-dev.txt  requirements-windows-dev.txt  requirements-windows.txt  requirements.txt
.github/workflows/: publish.yaml
data/: 20240131_PAR_RING_SECMALLS.csv  2cellASI.csv  Brood_size_wt.csv  PH_NEBD_Embryos_dataframe.csv  PH_Quantification.csv  RingPh_df.csv  RingPh_df_no_pb.csv  RingPh_res.csv  RingPh_res_no_pb.csv  calibration_constants.txt  calibration_cyt.txt  calibration_df.csv  calibration_df6.csv  calibration_embryos.csv  calibration_mem1.txt  calibration_mem2.txt  calibration_mem3.txt  calibration_mem4.txt  calibration_mem5.txt  calibration_mem6.txt  calibration_quantification6.csv  meiosis_df.csv  meiosis_embryos.csv  mlc4_embryos.csv  par2_nebd_embryos.csv  ph_embryos.csv  ph_quantification.csv  ring_ph_embryos.csv  ring_ph_embryos_no_pb.csv  ring_ph_quantification.csv  ring_ph_quantification_no_pb.csv  stats_table.csv
scripts/: INDEX.ipynb  INDEX.md  LinkPDFs.jsx  run_all.py  run_all_notebooks.py
scripts/Analysis/6HNL/: 6HNL.ipynb
scripts/Analysis/Dimer model fitting/: 00 ProcessData.ipynb  df_s2.csv  (+1 more)
scripts/Run/: Tidy.ipynb  calibration_cyt.ipynb  calibration_mem.ipynb  calibration_optogenetics.ipynb  meiosis_quantify.ipynb  mlc4_quantify.ipynb  par2_nebd_organise.ipynb  par2_nebd_quantify.ipynb  ph_organise.ipynb  ph_quantify.ipynb  ring_ph_quantify.ipynb
src/: __init__.py  dataplot.py  dimer_model_fit.py  helpers.py  image_quantification.py  plottling.py  rundowns_regression.py  stats.py
tests/: test_imports.py
(+186 files in other folders)
