[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["src"]

[project]
name = "src"
readme = "README.md"
version = "0.0.0"
license = {file = "LICENSE"}
authors = [
    { name = "Tom Bland" },
]
requires-python = ">=3.11.6"
dependencies = [
  "numpy",
  "matplotlib",
  "ipywidgets",
  "ipympl",
  "jupyter",
  "scipy",
  "pandas",
  "seaborn==0.11.0",
  "scikit-image",
  "tqdm",
  "sympy",
  "opencv-python",
  "opencv-contrib-python-headless",
  "nbformat",
  "nbconvert",
  "saibr==0.1.6",
  "matplotlib-polyroi==0.1.7",
  "par-segmentation[jax]==0.1.14",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black[jupyter]",
    "pip-tools",
    "ruff",
]

[tool.ruff]
extend-include = ["*.ipynb"]
select = ["E", "F", "I"] 